# silcc

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  autogen.sh  cc.prj  cc.pws  config.h.in  configure.ac
debian/: README.source  changelog  control  copyright  libsilcc-dev.install  libsilcc0.install  rules  silcc.1  silcc.install
include/: cc.h  ccdll.h  wtype.h
lib/: Makefile.am  ccstate.c  cctio.c  cctio.h
src/: Makefile.am  c8type.h  cc.c  cc08.c  cc08.h  ccerror.h  ccexec.c  cciofn.c  ccmalloc.c  ccmalloc.h  ccmsdo.c  ccomp.c  ccompfn.c  ccout.c  ccutil.c  filewc.c  filewc.h  keybrd.c  keybrd.h  msgput.c  msgput.h  system.h  test.cc  utf8.c  utf8.h
test/: Makefile.am  addmb.cct  camel.itx  ccputbuf.out  cctest.c  filetest.c  procfile.in  procfile.out  texts.itx  textsmb.out
