## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =\
	 -I$(top_srcdir)/include

libsilcc_la_CFLAGS =\
	 -DUNIX \
	 -DUNIXSHAREDLIB \
	 -Wall\
	 -g

lib_LTLIBRARIES = libsilcc.la

libsilcc_la_SOURCES = \
	../src/cciofn.c \
	../src/cc08.c \
	../src/msgput.c \
	../src/utf8.c \
	../src/ccutil.c \
	../src/ccout.c \
	../src/ccexec.c \
	../src/ccomp.c \
	../src/ccompfn.c \
	../src/cc.c \
	cctio.c \
	ccstate.c 

libsilcc_la_LDFLAGS = 

libsilcc_la_LIBADD = 

