## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	   -I$(top_srcdir)/include


silcc_CFLAGS =\
	 -DUNIX \
	 -DNO_QUESTIONS \
	 -Wall\
	 -g

bin_PROGRAMS = silcc

silcc_SOURCES = \
	     cc.c \
	     ccexec.c \
	     cciofn.c \
	     filewc.c \
	     utf8.c \
	     ccmsdo.c \
	     ccomp.c \
	     ccout.c \
	     ccutil.c \
	     msgput.c \
	     ccompfn.c
silcc_LDFLAGS = 

silcc_LDADD = 

